fix(Breadcrumbs): Fixed overlap

--- a/src/public/css/main_en.css
+++ b/src/public/css/main_en.css
@@ -5548,7 +5548,6 @@ form.visibilityContainer.inStoreForm {
   height: calc(100% - 20px);
 }
 .breadcrumbsContainerWrap {
-  position: absolute;
   top: -25px;
   display: -webkit-box;
   display: -moz-box;
